<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

    <EditText
        android:id="@+id/etCopy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        android:gravity="top"   
        android:scrollHorizontally="false"
        android:inputType="textMultiLine"
         />
    <RadioGroup 
       android:id="@+id/rbgTextHTML"
       android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       >
         <RadioButton 
           android:id="@+id/rbHtml"
           android:layout_weight=".5"
           android:layout_width="0dp" 
           android:layout_height="wrap_content"
           android:checked="true"
           android:text="@string/rbHtml"/>
       <RadioButton
           android:id="@+id/rbText"
           android:layout_weight=".5"
           android:layout_width="0dp" 
           android:layout_height="wrap_content"
           android:text="@string/rbText"/>
     
   </RadioGroup>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
   <Button 
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_weight=".5"
       android:onClick="copyHtml"
       android:text="@string/btCopy"/>
   <Button 
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_weight=".5"
       android:onClick="pasteHtml"
       android:text="@string/btPaste"/>
   </LinearLayout>
   <LinearLayout android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <Button
           android:layout_width="0dp"
           android:layout_weight=".5"
           android:layout_height="wrap_content"
           android:onClick="sendHtmlIntent"
           android:text="@string/btSendHtmlIntent"/>
       <Button 
           android:layout_width="0dp"
           android:layout_weight=".5"
           android:layout_height="wrap_content"
           android:onClick="sendClipdataIntent"
           android:text="@string/btSendClipdataIntent"/>
   </LinearLayout>
   <TextView
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/tvCopiedText"/>
   <EditText
       android:id="@+id/etPaste" 
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:inputType="textMultiLine"
        android:gravity="top"   
        android:scrollHorizontally="false"
       />
   <TextView
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/tvcoerceText"/>
   <EditText
       android:id="@+id/etPasteCoerceText" 
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:gravity="top"   
       android:scrollHorizontally="false"
       android:inputType="textMultiLine"/>
</LinearLayout>
